# Tanks-v2

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-web.sh  package.json  vercel.json
.cargo/: config.toml
.github/workflows/: deploy.yml
scripts/: vercel-install.sh
src/: aircraft.rs  camera.rs  combat.rs  control.rs  effects.rs  input.rs  main.rs  physics.rs  soldiers.rs  squad.rs  tank.rs  terrain.rs  ui.rs  version.rs  weapons.rs
web/: index.html
